--- a/_CRUDMVC/nbproject/project.properties
+++ b/_CRUDMVC/nbproject/project.properties
@@ -27,11 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/CRUDMVC.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.mysql-connector-java-8.0.17.jar-1=/usr/share/java/mysql-connector-java-8.0.17.jar
+file.reference.mysql-connector-java-8.0.17.jar=/usr/share/java/mysql-connector-java-8.0.17.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.17.jar-1}
+    ${file.reference.mysql-connector-java-8.0.17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
