--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /CRUDMVC/nbproject/private/
 /CRUDMVC/build/
+/GestionClientesMVC/nbproject/private/
+/GestionClientesMVC/build/
+/GestionClientesMVC/dist/
